--- a/src/style/_UserLogin.css
+++ b/src/style/_UserLogin.css
@@ -1,18 +1,32 @@
+.cover {
+  width: 100%;
+  min-height: 100vh;
+  background-color: white;
+}
+
 .userContainer {
-  width: 50%;
+  width: 32%;
   margin: 0 auto;
 }
 
 .userLogo {
   text-align: center;
+  margin: 3rem 0;
 }
 .userLogo img {
-  width: 20%;
+  width: 144px;
   height: auto;
 }
 
 .userSubmit {
   text-align: center;
+}
+
+.FormCard {
+  /* position: absolute;
+  left: 50%;
+  top: 50%;
+} */
 }
 
 .userSubmitButton {
@@ -37,4 +51,18 @@
 }
 .userInput {
   border: 1px solid #686f75;
+}
+
+@media only screen and (max-width: 768px) {
+  .userContainer {
+    width: 80%;
+  }
+  .userLogo {
+    margin-top: 7rem;
+    margin-bottom: 2rem;
+  }
+  .userLogo img {
+    width: 128px;
+    height: auto;
+  }
 }
