--- a/src/style/app.css
+++ b/src/style/app.css
@@ -13,3 +13,5 @@ body {
 @import "./_ContentUser.css";
 @import "./_UserLogin.css";
 @import "./_ContentUserAdd.css";
+@import "./_ContentProducts.css";
+@import "./_Chart.css";
