--- a/src/style/app.css
+++ b/src/style/app.css
@@ -15,3 +15,4 @@ body {
 @import "./_ContentUserAdd.css";
 @import "./_ContentProducts.css";
 @import "./_Chart.css";
+@import "./_DeliveryDashBoard.css";
