--- a/src/style/app.css
+++ b/src/style/app.css
@@ -17,3 +17,5 @@ body {
 @import "./_Chart.css";
 @import "./_DeliveryDashBoard.css";
 @import "./_QrCode.css";
+@import "./_PDF.css";
+@import "./_HeaderBar.css";
