--- a/src/style/_DeliveryDashBoard.css
+++ b/src/style/_DeliveryDashBoard.css
@@ -89,12 +89,6 @@
 .priceDelivery {
   /* width: 20px; */
 }
-
-/* .SUCCESS {
-  color: #52c41a;
-  font-weight: "bold";
-  font-size: "0.6rem";
-} */
 .UNSUCCESS {
   color: #f05454;
 }
@@ -108,6 +102,9 @@
   margin-bottom: 0.4rem;
 }
 
+/* .message {
+  width: 30px;
+} */
 @media only screen and (orientation: landscape) {
   .columns {
     font-size: 12px;
