--- a/src/style/_ContentList.css
+++ b/src/style/_ContentList.css
@@ -8,7 +8,7 @@
 .list {
   margin-top: 2rem;
   width: 40%;
-  height: 90vh;
+  height: 100vh;
   border-radius: 10px;
 
   /* background-image: linear-gradient(120deg, #a1c4fd 0%, #c2e9fb 100%); */
@@ -94,7 +94,7 @@
 .shop {
   margin-top: 2rem;
   width: 56%;
-  height: 80vh;
+  height: 100vh;
   border-radius: 10px;
   /* border: 2px solid black; */
   /* background-image: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%); */
@@ -118,6 +118,8 @@
 
 .listShop {
   width: 90%;
+  height: 100%;
+
   margin: 0 auto;
   /* margin-top: 1rem; */
 }
