view daily shop

--- a/src/style/app.css
+++ b/src/style/app.css
@@ -49,3 +49,4 @@ page[size="A4"] {
 @import "./_HomePage.css";
 @import "./_ContentList.css";
 @import "./_ReportDelivery.css";
+@import "./_DailyShop.css";
